--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="src/public/PHONE IMG.png" type="image/png">
+   <link rel="icon" href="/PHONE-IMG.png" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
